syntax = "proto3";

package types;

option go_package = "github.com/garethgeorge/restora/gen/go/types";

message StringValue {
  string value = 1;
}

message StringList {
  repeated string values = 1;
}

message Int64Value {
  int64 value = 1;
}
